--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "update-types": "npx supabase gen types typescript --project-id \"$PROJECT_REF\" > src/types/supabase.ts"
   },
   "dependencies": {
     "@icons-pack/react-simple-icons": "^9.3.0",
