--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "update-types": "npx supabase gen types typescript --project-id \"$PROJECT_REF\" > src/types/supabase.ts"
+    "update-types": "npx supabase gen types typescript --project-id 'vqshuekoluutdogfxqnv' > src/types/supabase.ts"
   },
   "dependencies": {
     "@icons-pack/react-simple-icons": "^9.3.0",
