🚧 ✨♻️  Rework Add-song page with automated link-fetching TODO: - Fix/replace buggy framer motion reoder feature - Work on supporting more services

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "soundcloud.ts": "^0.5.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "youtube-sr": "^4.3.10",
     "zod": "^3.22.4"
   },
   "devDependencies": {
