✨ Workaround to find Apple Music links via CustomGoogleSearch API

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "update-types": "npx supabase gen types typescript --project-id 'vqshuekoluutdogfxqnv' > src/types/supabase.ts"
   },
   "dependencies": {
+    "@googleapis/customsearch": "^1.1.0",
     "@hookform/resolvers": "^3.3.4",
     "@icons-pack/react-simple-icons": "^9.3.0",
     "@mdi/js": "^7.4.47",
