--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
+    "react-spinners": "^0.13.8",
     "soundcloud.ts": "^0.5.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
