--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@vercel/speed-insights": "^1.0.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "essentia.js": "^0.1.3",
     "ffmpeg-static": "^5.2.0",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
