--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "update-types": "npx supabase gen types typescript --project-id 'vqshuekoluutdogfxqnv' > src/types/supabase.ts"
+    "test": "jest --watch"
   },
   "dependencies": {
     "@googleapis/customsearch": "^1.1.0",
@@ -33,13 +33,16 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/jest": "^29.5.12",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dotenv": "^16.4.5",
     "essentia.js": "^0.1.3",
     "ffmpeg-static": "^5.2.0",
     "framer-motion": "^11.0.8",
+    "jest": "^29.7.0",
     "lucide-react": "^0.344.0",
     "next": "14.1.3",
     "next-themes": "^0.2.1",
@@ -54,12 +57,15 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.1",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "supabase": ">=1.8.1",
     "tailwindcss": "^3.3.0",
